add new plugins: basic-auth